--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^5.5.0",
-    "gatsby-plugin-image": "^3.5.0",
-    "gatsby-plugin-manifest": "^5.5.0",
-    "gatsby-plugin-sharp": "^5.5.0",
-    "gatsby-source-filesystem": "^5.5.0",
-    "gatsby-transformer-sharp": "^5.5.0",
+    "@apollo/client": "^3.6.9",
+    "@pasdo501/gatsby-source-woocommerce": "^0.17.2",
+    "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
+    "gatsby": "^5.6.0",
+    "gatsby-plugin-image": "^3.6.0",
+    "gatsby-plugin-sharp": "^5.6.0",
+    "gatsby-source-filesystem": "^5.6.0",
+    "gatsby-source-wordpress": "^7.6.0",
+    "gatsby-transformer-sharp": "^5.6.0",
+    "graphql": "^16.6.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.8.3"
