--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "gatsby": "^5.6.0",
-    "gatsby-plugin-image": "^3.6.0",
-    "gatsby-plugin-sharp": "^5.6.0",
-    "gatsby-source-filesystem": "^5.6.0",
-    "gatsby-source-wordpress": "^7.6.0",
-    "graphql": "^16.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "gatsby": "^4.21.1",
+    "gatsby-plugin-image": "^2.21.0",
+    "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-source-wordpress": "^6.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "prettier": "^2.8.3"
